--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,29 @@
+version: "3.9"
+
 services:
     # FastAPI backend service
     backend:
         build:
             context: ./api
             dockerfile: Dockerfile
-        volumes:
-            - ./uploads:/app/uploads # Mount uploads volume
-            - ./models:/app/models # Mount models volume
-        ports:
-            - "7135:7135" # Expose FastAPI app on port 7135
+        working_dir: /app
+        # Run Uvicorn explicitly (same as your Dockerfile CMD, but visible here)
+        command:
+            ["sh", "-lc", "uvicorn fast:application --host 0.0.0.0 --port 7135"]
         environment:
-            - PYTHONUNBUFFERED=1 # To prevent Python output buffering (useful for logging)
+            - PYTHONUNBUFFERED=1
+            # 👇 absolute, shared paths INSIDE the container
+            - UPLOADS_DIR=/data/uploads
+            - MODELS_DIR=/data/models
+        volumes:
+            # 👇 host ↔ container mounts (mirror with ./data on host)
+            - ./data/uploads:/data/uploads
+            - ./data/models:/data/models
+        ports:
+            - "7135:7135"
         networks:
             - app-network
+        restart: unless-stopped
 
     # Next.js frontend service
     frontend:
@@ -23,41 +34,46 @@ services:
             - mysql
         environment:
             - DATABASE_URL=mysql://root:fadifadi2025@mysql:3306/skinconditions
+            # Same shared uploads path so FE and BE see the same files
+            - UPLOADS_DIR=/data/uploads
         volumes:
-            - ./poxapp:/app
-            # keep node_modules from being hidden by the bind mount (optional but helpful)
-            - /app/node_modules
+            - ./poxapp:/app # app code (bind mount)
+            - /app/node_modules # prevent deps from being hidden by bind mount
+            - ./data/uploads:/uploads # shared files (images)
+        working_dir: /app
+        # Dev server, reachable from outside container
+        command:
+            [
+                "sh",
+                "-lc",
+                "npm ci && npx next dev --port 7134 --hostname 0.0.0.0",
+            ]
         ports:
             - "7134:7134"
-        working_dir: /app
-        command: ["sh","-lc","npm ci && npx next dev --port 7134 --hostname 0.0.0.0"]
         networks:
             - app-network
+        restart: unless-stopped
 
     # MySQL service
     mysql:
-        image: mysql:8.0 # Use official MySQL image, version 8.0
+        image: mysql:8.0
         environment:
-            MYSQL_ROOT_PASSWORD: fadifadi2025 # Replace with a secure password
-            MYSQL_DATABASE: skinconditions # Default database name (optional)
-            MYSQL_USER: dux # Optional: create a custom MySQL user
-            MYSQL_PASSWORD: dux123 # Optional: password for custom user
+            MYSQL_ROOT_PASSWORD: fadifadi2025 # 🔐 consider a stronger secret
+            MYSQL_DATABASE: skinconditions
+            MYSQL_USER: dux
+            MYSQL_PASSWORD: dux123
+        # Safer: bind DB to localhost only (remove entirely if not needed from host)
         ports:
-            - "7136:3306" # Map MySQL port 3306 to 7136
+            - "127.0.0.1:7136:3306"
         volumes:
-            - mysql-data:/var/lib/mysql # Persist MySQL data
+            - mysql-data:/var/lib/mysql
         networks:
             - app-network
+        restart: unless-stopped
 
 volumes:
-    uploads:
-        driver: local
-    models:
-        driver: local
     mysql-data:
-        driver: local
 
-# Network for the services to communicate
 networks:
     app-network:
         driver: bridge
